<resources>
    <string name="app_name">Triple Nines</string>
    <string name="btnSetValue">Set Value</string>
    <string name="amount">Amount: $</string>
    <string name="BankLbl">Bank: $</string>
    <string name="lblBank">0.00</string>
    <string name="btnPull">Pull Lever</string>
    <string name="btnNewGame">New Game</string>
    <string name="lblMessage">Message:</string>
    <string name="lblMsg"></string>
</resources>
